Fixes2 (#6)