@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id("com.gradleup.shadow") version "8.3.8"
+    id 'org.graalvm.buildtools.native' version '0.11.0'
 }
 
 group = 'com.fullsteam'
@@ -19,6 +20,7 @@ dependencies {
     implementation "io.netty:netty-codec-http:${nettyVersion}"
     implementation "io.netty:netty-handler:${nettyVersion}"
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.module:jackson-module-blackbird:${jacksonVersion}"
     implementation "ch.qos.logback:logback-classic:${logbackVersion}"
     implementation "org.apache.commons:commons-lang3:3.18.0"
 
@@ -39,4 +41,30 @@ shadowJar {
     archiveVersion.set(project.version)
     archiveClassifier.set('')
     zip64 = true
+}
+
+graalvmNative {
+    agent {
+        defaultMode = "standard"
+        enabled = true
+    }
+    binaries {
+        main {
+            mainClass = 'com.fullsteam.GameServer'
+            fallback = false
+            useFatJar = true
+//             buildArgs.add('--verbose')
+            buildArgs.add('--add-opens=java.base/java.nio=ALL-UNNAMED')
+            buildArgs.add('--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED')
+            buildArgs.add('--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED')
+            buildArgs.add('--trace-class-initialization=ch.qos.logback.classic.Logger')
+            buildArgs.add('--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker')
+            buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback')
+            buildArgs.add('--initialize-at-run-time=io.netty')
+        }
+
+        all {
+            resources.autodetect()
+        }
+    }
 }
